<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099ff"
    tools:context=".financial_page">

    <View
        android:id="@+id/view9"
        android:layout_width="0dp"
        android:layout_height="440dp"
        android:layout_marginTop="165dp"
        android:background="@drawable/mini_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/circle_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view9"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view9" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toTopOf="@+id/view9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shepherd" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/exodus"
        android:textColor="#FDFDFD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="219dp"
        android:layout_height="106dp"
        android:layout_marginTop="3dp"
        android:text="@string/bible_verse"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <View
        android:id="@+id/viewlipanampesa"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/mpesa_backgrounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view9" />

    <View
        android:id="@+id/view13"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mpesa_backgrounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view12" />

    <View
        android:id="@+id/view12"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mpesa_backgrounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewlipanampesa" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_money"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="@+id/view12"
        app:layout_constraintStart_toStartOf="@+id/view12"
        app:layout_constraintTop_toTopOf="@+id/view12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paybill"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/view13"
        app:layout_constraintEnd_toEndOf="@+id/view13"
        app:layout_constraintStart_toStartOf="@+id/view13"
        app:layout_constraintTop_toTopOf="@+id/view13" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lipa_na_mpesa"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewlipanampesa"
        app:layout_constraintEnd_toEndOf="@+id/viewlipanampesa"
        app:layout_constraintStart_toStartOf="@+id/viewlipanampesa"
        app:layout_constraintTop_toTopOf="@+id/viewlipanampesa" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view9"
        app:srcCompat="@drawable/safaricom_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>