<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserHomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1F5FE">

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="#0099ff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="325dp"
            android:layout_height="380dp"
            android:background="@drawable/center_shape"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view8"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/text_background"
            android:text="@string/reports"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/view8"
            app:layout_constraintStart_toStartOf="@+id/view8"
            app:layout_constraintTop_toTopOf="@+id/view8" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/ic_wpwwave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/ic_wpwwave"
            android:rotationX="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/viewUserBible"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/viewUserBible"
            app:layout_constraintStart_toStartOf="@+id/viewUserBible"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/bible" />

        <View
            android:id="@+id/viewTithesandOfferings"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/viewTithesandOfferings"
            app:layout_constraintStart_toStartOf="@+id/viewTithesandOfferings"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/charity" />

        <View
            android:id="@+id/viewUserEvents"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/viewUserEvents"
            app:layout_constraintStart_toStartOf="@+id/viewUserEvents"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/event" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/view8"
            app:layout_constraintStart_toStartOf="@+id/view8"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/statistics" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/text_background"
            android:text="@string/events"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/viewUserEvents"
            app:layout_constraintStart_toStartOf="@+id/viewUserEvents"
            app:layout_constraintTop_toTopOf="@+id/viewUserEvents" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/text_background"
            android:text="@string/openbible"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/viewUserBible"
            app:layout_constraintStart_toStartOf="@+id/viewUserBible"
            app:layout_constraintTop_toTopOf="@+id/viewUserBible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/text_background"
            android:text="@string/tithes"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/viewTithesandOfferings"
            app:layout_constraintStart_toStartOf="@+id/viewTithesandOfferings"
            app:layout_constraintTop_toTopOf="@+id/viewTithesandOfferings" />

        <ImageView
            android:id="@+id/imageViewUserProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <TextView
            android:id="@+id/textViewWelcomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/loading"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUserProfile" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/usermesssage"
            android:textColor="#FDFAFA"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeUser" />

        <ProgressBar
            android:id="@+id/progressBarUser"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>